tdf#140977 drop possible table-cursor before setting the new one

Change-Id: I3d278af77886af3413b4a15464c8a52caa9a8e02